There is no longer a horizontal scroll bar during loading on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ span, h1, h2, h3, h4, h5, h6, a, p {
 
 body {
   margin: 0 0 0 0;
+  overflow: hidden;
 }
 
 html {
@@ -790,6 +791,10 @@ main {
   100% {
     opacity: 1;
     transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
   }
 }
 
