--- a/sass/utils/_animationApparition.scss
+++ b/sass/utils/_animationApparition.scss
@@ -1,10 +1,11 @@
 @for $i from 1 through $maxplat{
   .pageRestaurant__menu__categorie__plat {
     &:nth-child(#{$i}) {
-      animation-delay: $i * (.06s) + 2.5s;
+      animation-delay: $i * (.06s) + 2.5s; 
     }
   }
 }
+
 
 @keyframes apparition {
   0% {
@@ -15,5 +16,9 @@
   100% {
     opacity: 1;
     transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
   }
 }
